<resources>
    <string name="app_name">WaterTraker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Главная</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_profile">Профиль</string>
    <string name="select_drink">Выберите напиток</string>
    <string name="button_set">Настроить!</string>
    <string name="button_profile">Приступить!</string>
    <string name="age_title">Возраст</string>
    <string name="weight_title">Вес, кг</string>
    <string name="height_title">Рост, см</string>
    <string name="radio_male">Мужчина</string>
    <string name="radio_female">Женщина</string>
    <string name="sex_title">Пол</string>
    <string name="text_wall">Для начала работы с приложением небоходимо ввести свои данные</string>
    <string name="stats">Статистика</string>
    <string name="home_title">Трекер воды</string>
    <string name="title_profile">Расчет нормы</string>
</resources>
