<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
                android:id="@+id/norm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:text="0.00 л"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex_title"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:textSize="15sp"
                />

        <RadioGroup
                android:id="@+id/radio_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:checked="true" />

            <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />

        </RadioGroup>

        <TextView
                android:id="@+id/height_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height_title"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                />

        <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isb_min="50"
                app:isb_max="250"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_indicator_color="@color/colorPrimary"
                app:isb_track_progress_color="@color/colorAccent"
                app:isb_thumb_color="@color/colorPrimary"/>

        <TextView
                android:id="@+id/weight_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_title"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                />

        <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isb_min="20"
                app:isb_max="300"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_indicator_color="@color/colorPrimary"
                app:isb_track_progress_color="@color/colorAccent"
                app:isb_thumb_color="@color/colorPrimary"/>

        <TextView
                android:id="@+id/age_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_title"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                />

        <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isb_min="1"
                app:isb_max="150"
                app:isb_show_tick_marks_type="oval"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_indicator_color="@color/colorPrimary"
                app:isb_track_progress_color="@color/colorAccent"
                app:isb_thumb_color="@color/colorPrimary"/>

        <Button
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                style="@style/GreenButton"
                android:textColor="@android:color/white"
                android:text="@string/button_profile"/>

    </LinearLayout>
</ScrollView>